# FlagForge

./: .gitignore  README.md
backend/: Dockerfile  go.mod  go.sum  main.go
backend/api/: feature_handler.go  router.go
backend/cache/: cache.go
backend/model/: feature.go
backend/service/: feature_service.go
backend/storage/: db.go  feature_repo.go
deploy/: docker-compose.yml  init-mysql.sql  init.sql
docs/: README.md  api.md  database.md  design.md  setup.md  user-guide.md
example/c/: main.c
example/cpp/: main.cpp
scripts/: deploy.ps1  start-backend.ps1  start-dev.sh  start-web.ps1  test_api.py
sdk/c/: CMakeLists.txt
sdk/c/include/: flagforge.h
sdk/c/src/: flagforge.cpp
sdk/cpp/: CMakeLists.txt
sdk/cpp/include/flagforge/: feature_manager.h
sdk/cpp/src/: feature_manager.cpp
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
web/src/: App.jsx
web/src/api/: feature.js
web/src/components/: ConditionEditor.jsx  ErrorBoundary.jsx  FeatureForm.jsx  RuleDrawer.jsx
web/src/pages/: AppManage.jsx  AuditLog.jsx  EnvManage.jsx  FeatureList.jsx  FeatureQuery.jsx  RuleManage.jsx
web/src/utils/: conditions.js
